# render_kinect

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: robot_sim_config.yaml  sim_config.yaml
config/default_setup/: robot_sim_config.yaml  sim_config.yaml
include/render_kinect/: camera.h  gaussian.h  kinectSimulator.h  noise.h  noiseutils.h  objectMeshModel.h  perlin.h  process_model.h  random_process.h  robot_state.h  simplex.h  simulate.h  wiener_process.h  yamlutils.h
include/render_kinect/tools/: rosread_utils.h  tf_utils.h  yamlutils.h
launch/: generate_dataset.launch  generate_robot_dataset.launch  kinect_frames.launch  render_kinect.launch  render_robot.launch
obj_models/: room0.dae
src/: add_pointcloud_to_database.cpp  generate_dataset.cpp  generate_robot_dataset.cpp  kinectSimulator.cpp  main_kinect.cpp  move_object.cpp  move_robot.cpp  noiseutils.cpp  robot_state.cpp  test_point_cloud_from_database_add.cpp
